--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -26,5 +26,11 @@
     <input type="text" id="burger_name" name="name">
   </div>
 
+  <div class="form-group" id="change-devour">
+    <label for="devour">Devour?</label><br>
+    <input type="radio" name="devour" value="1" checked> Devoured!<br>
+    <input type="radio" name="devour" value="0"> Not devoured
+  </div>
+
   <button type="submit">Add Burger</button>
 </form>
