--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,7 @@
     <title>Burgers</title>
     <link rel="stylesheet" href="/public/assets/CSS/burger_style.css" type="text/css" />
     <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="/public/assets/JS/public.js"></script>
 </head>
 <body>
     {{{body}}}
